--- a/First_model.ipynb
+++ b/First_model.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1280,6 +1280,73 @@
     "# Save Loss,\n",
     "\n",
     "loss_df.to_csv(f'/Save_Data/{version_name}_{epochs}_loss.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# CSV 로드\n",
+    "df = pd.read_csv(f'/content/drive/MyDrive/RNA/k-mer-version/{version_name}_loss.csv')\n",
+    "\n",
+    "epochs = df['epoch']\n",
+    "train_loss = df['train_loss']\n",
+    "val_loss = df['val_loss']\n",
+    "\n",
+    "# 최솟값 정보\n",
+    "min_val_loss = val_loss.min()\n",
+    "min_epoch = epochs[val_loss.idxmin()]\n",
+    "\n",
+    "# 그래프 만들기\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "# Train Loss\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=epochs,\n",
+    "    y=train_loss,\n",
+    "    mode='lines+markers',\n",
+    "    name='Train Loss',\n",
+    "    line=dict(color='blue'),\n",
+    "    hovertemplate='Epoch: %{x}<br>Train Loss: %{y:.4f}<extra></extra>'\n",
+    "))\n",
+    "\n",
+    "# Val Loss\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=epochs,\n",
+    "    y=val_loss,\n",
+    "    mode='lines+markers',\n",
+    "    name='Val Loss',\n",
+    "    line=dict(color='red'),\n",
+    "    hovertemplate='Epoch: %{x}<br>Val Loss: %{y:.4f}<extra></extra>'\n",
+    "))\n",
+    "\n",
+    "# 최소값 표시\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=[min_epoch],\n",
+    "    y=[min_val_loss],\n",
+    "    mode='markers+text',\n",
+    "    marker=dict(color='green', size=10),\n",
+    "    text=[f\"Min Val Loss: {min_val_loss:.4f} (Epoch {min_epoch})\"],\n",
+    "    textposition='top center',\n",
+    "    name='Min Val'\n",
+    "))\n",
+    "\n",
+    "# 레이아웃 꾸미기\n",
+    "fig.update_layout(\n",
+    "    title=\"Train & Validation Loss (Interactive)\",\n",
+    "    xaxis_title=\"Epoch\",\n",
+    "    yaxis_title=\"Loss\",\n",
+    "    hovermode='x unified',\n",
+    "    template='plotly_white',\n",
+    "    legend=dict(x=0.01, y=0.99)\n",
+    ")\n",
+    "\n",
+    "fig.show()\n"
    ]
   }
  ],
